Switch from List.of to Arrays.asList and revise pom.xml target
Refactor multiple instances of List.of to Arrays.asList for clearer and more compatible code. Also, revert the Maven compiler version in the pom.xml from 1.9 to 1.8 for better compatibility.